update at 1:11am

--- a/index.html
+++ b/index.html
@@ -134,5 +134,61 @@
             <button id="inf-but">Tạo profile TopCV</button>
         </div>
     </div>
+    </div>
+
+    <div class="foot">
+        <div class="footer-up">
+            <div class="footer-top-left">
+                <div>
+                    <h3>ứng viên</h3>
+                    <hr>
+                    <ul class="list">
+                        <li>Tìm việc làm</li>
+                        <li>Khóa học</li>
+                        <li>Trắc nghiệm MBTI</li>
+                        <li>Hướng dẫn viết CV</li>
+                        <li>Tài khoản cao cấp</li>
+                        <li>Tư vấn sửa CV</li>
+                        <li>Thiết kế CV</li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h3>ứng viên</h3>
+                    <hr>
+                    <ul class="list">
+                        <li>Tìm việc làm</li>
+                        <li>Khóa học</li>
+                        <li>Trắc nghiệm MBTI</li>
+                        <li>Hướng dẫn viết CV</li>
+                        <li>Tài khoản cao cấp</li>
+                        <li>Tư vấn sửa CV</li>
+                        <li>Thiết kế CV</li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h3>Kết nối</h3>
+                    <hr>
+                    <ul class="connect">
+                        <li>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                            <i class="fab fa-youtube"></i>
+                        </li>
+                        <li><img src="bct.webp" width="143" height="44" alt="">
+                        </li>
+                        <li><img src="_dmca_premi_badge_2.png" width="98" height="103" alt=""></li>
+                        <li></li>
+                    </ul>
+                </div>
+                
+            </div>
+            <div class="footer-top-right">2</div>
+        </div>
+        <div class="footer-down"></div>
+
+    </div>
 </body>
 </html>
