--- a/index.html
+++ b/index.html
@@ -147,26 +147,26 @@
                 <div>
                     <h3>ứng viên</h3>           
                     <ul class="list">
-                        <li>Tìm việc làm</li>
-                        <li>Khóa học</li>
-                        <li>Trắc nghiệm MBTI</li>
-                        <li>Hướng dẫn viết CV</li>
-                        <li>Tài khoản cao cấp</li>
-                        <li>Tư vấn sửa CV</li>
-                        <li>Thiết kế CV</li>
+                        <a href=""><li>Tìm việc làm</li></a>
+                        <a href=""><li>Khóa học</li></a>
+                        <a href=""><li>Trắc nghiệm MBTI</li></a>
+                        <a href=""><li>Hướng dẫn viết CV</li></a>
+                        <a href=""><li>Tài khoản cao cấp</li></a>
+                        <a href=""><li>Tư vấn sửa CV</li></a>
+                        <a href=""><li>Thiết kế CV</li></a>
                     </ul>
 
                 </div>
                 <div>
                     <h3>ứng viên</h3>
                         <ul class="list">
-                            <li>Tìm việc làm</li>
-                            <li>Khóa học</li>
-                            <li>Trắc nghiệm MBTI</li>
-                            <li>Hướng dẫn viết CV</li>
-                            <li>Tài khoản cao cấp</li>
-                            <li>Tư vấn sửa CV</li>
-                            <li>Thiết kế CV</li>
+                            <a href=""><li>Tìm việc làm</li></a>
+                            <a href=""><li>Khóa học</li></a>
+                            <a href=""><li>Trắc nghiệm MBTI</li></a>
+                            <a href=""><li>Hướng dẫn viết CV</li></a>
+                            <a href=""><li>Tài khoản cao cấp</li></a>
+                            <a href=""><li>Tư vấn sửa CV</li></a>
+                            <a href=""><li>Thiết kế CV</li></a>
                         </ul>
 
                 </div>
@@ -198,48 +198,48 @@
                     <img src="appstore.webp" width="auto" height="30" alt=""><img src="chplay.webp" width="auto" height="30" alt="">
                 </div>
                 <div class="flex">
-                    <div>    
-                            <a href=""><div>Gioi thieu</div>
-                            <a href=""><div>Goc bao chi</div>
-                            <a href=""><div>Tuyen dung</div>
-                            <a href=""><div>Tai tro su kien</div>
-                            <a href=""><div>diven he</div>
-                            <a href=""><div>Khoa hoc</div>
-                            <a href=""><div>Su kien- Cuoc thi</div>
-                            <a href=""><div>Hoi dap</div>          
-                    </div>
+                    <ul>    
+                            <a href=""><li>Gioi thieu</li></a>
+                            <a href=""><li>Goc bao chi</li></a>
+                            <a href=""><li>Tuyen dung</li></a>
+                            <a href=""><li>Tai tro su kien</li></a>
+                            <a href=""><li>lien he</li></a>
+                            <a href=""><li>Khoa hoc</li></a>
+                            <a href=""><li>Su kien- Cuoc thi</li></a>
+                            <a href=""><li>Hoi dap</li>          </a>
+                    </ul>
                         
-                    <div>      
-                            <a href=""><div>CHinh sach bao mat</div></a>
-                            <a href=""><div>Dieu khoan dich vu</div></a>
-                            <a href=""><div>Quy che hoat dong</div></a>
-                    </div>
+                    <ul>      
+                            <a href=""><li>CHinh sach bao mat</li></a>
+                            <a href=""><li>Dieu khoan dich vu</li></a>
+                            <a href=""><li>Quy che hoat dong</li></a>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="footer-down">
             <div class="down-up">
                 <ul>
-                   <li>cv la gi</li>
-                   <li>cv la gi</li> 
-                   <li>giấy tờ thủ tục hồ sơ xin việc,</li>
-                   <li>cách viết CV Ngành Kinh doanh/Bán hàng</li>
-                   <li>cv la gi</li>
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>Cẩm nang xin việc ngành tài chính ngân hàng</li> 
-                   <li>cv la gi</li> 
+                   <a href=""><li>cv la gi</li></a>
+                   <a href=""><li>cv la gi</li> </a>
+                   <a href=""><li>giấy tờ thủ tục hồ sơ xin việc,</li></a>
+                   <a href=""><li>cách viết CV Ngành Kinh doanh/Bán hàng</li></a>
+                   <a href=""><li>cv la gi</li></a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>Cẩm nang xin việc ngành tài chính ngân hàng</li> </a>
+                   <a href=""><li>cv la gi</li> </a>
                 </ul>
             </div>
             <div class="down-down ">
