--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href=""><li>Quản lí CV</li></a>
                     <a href=""><li>Khám phá</li></a>
                     <a href=""><li>Công ty</li></a>
-                    <a href=""><li class="flex"><img src="user.jpg" alt=""><i class="fas fa-caret-down"></i></li></a>
+                    <a href=""><li class="user2"><img src="user.jpg" alt=""><i class="fas fa-caret-down"></i></li></a>
                     <a href=""><li id="bell"><i class="fas fa-bell"></i></li></a>
                 </ul>
                 <div class="hr">
