--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel = "icon" href =  
+"https://www.topcv.vn/v3/images/new/favicon.ico" 
+        type = "image/x-icon"> 
 </head>
 <body>
     <div class="big-contain">
@@ -155,7 +158,7 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div id="bo">
-                            <div id="num">1</div>
+                            <div id="num">10</div>
                             <div id="times">lượt</div>
                            </div>
                     </div>
